more theme changes

--- a/data/landing.yaml
+++ b/data/landing.yaml
@@ -13,24 +13,24 @@ hero:
       mobile: "gradient-mobile.webp"
 
   badge:
-    text: v0.1.0
+    text: v0.0.1
     color: primary # primary, secondary, success, danger, warning, info, light, dark
     pill: false # boolean
     soft: true # boolean
 
-  # titleLogo:
-  #   path: "images/logos"
-  #   filename: "title_logo.png"
-  #   alt: "Lotus Docs Logo"
-  #   height: 80px
+  titleLogo:
+    path: "images/logos"
+    filename: "payatu_logo.png"
+    alt: "Payatu Logo"
+    height: 80px
 
-  title: "Lotus Docs"
-  subtitle: A lightweight, **modern documentation** theme for Hugo. Easily customised for building **fast**, **secure**, and **SEO-friendly** documentation sites.
+  title: "Buggy Codes by Payatu"
+  subtitle: A platform to practise the secure code review skills in many different languages and difficulties.
 
   image:
     path: "images" # path to image under configured assets directory. default 'images'
-    filename: "lotus_docs_screenshot.png" # filename of your hero image (including file extension)
-    alt: "Lotus Docs Screenshot" # Optional but recommended
+    filename: "Hero Image.png" # filename of your hero image (including file extension)
+    alt: "Secure code image" # Optional but recommended
     boxShadow: true # default 'false' (excludes .svg images)
     rounded: true # round the image corners? default 'false' (excludes .svg images)
 
@@ -40,10 +40,14 @@ hero:
     url: "/docs/quickstart/#create-a-new-lotus-docs-site"
   cta2Button:
     icon: construction
-    btnText: "In Development"
+    btnText: "Contribute"
     url: "https://github.com/colinwilson/lotusdocs"
+  cta3Button:
+    icon: 
+    btnText: "Contributors"
+    url: "/docs"
 
-  info: "**Open Source** MIT Licensed."
+  info: "By Payatu."
 
 # Feature Grid
 featureGrid:
@@ -51,45 +55,30 @@ featureGrid:
   weight: 20
   template: feature grid
 
-  title: Why choose Lotus Docs?
-  subtitle: Lotus Docs is a highly configurable Hugo documentation theme. Yet, with the default configuration you can deploy and publish your documentation site in a matter of minutes. Check out some core features below.
+  title: Why Buggy Codes?
+  subtitle: About Buggy Codes by Payatu.
 
   items:
-    - title: Fast
-      icon: speed
-      description: 4 x 100's score on Google Lighthouse by default. Lotus Docs removes unused CSS, prefetches asset links, and lazy loads content images.
+    - title: Challenges in many languages
+      icon: language
+      description: Java, .NET, Python, PHP, Node.js.
 
-    - title: SEO Friendly
-      icon: trending_up
-      description: Data is automatically structured to be SEO friendly. Includes Meta tags, Opengraph, and Twitter cards. Choose the settings that best suit you.
+    - title: Different categories of bugs
+      icon: bug_report
+      description: All the different OWASP Top 10 categories.
 
-    - title: Secure by default
+    - title: Secure code also provided
       icon: lock
-      description: Lotus Docs' default configuration scores A+ on Mozilla Observatory. You can update the default Security Headers to suit your requirements.
+      description: Solutions - secure code would also be released for each challenge.
 
-    - title: Optional Features
-      icon: settings
-      description: Many Lotus Docs features are configurable via optional parameters. Require DocSearch for your site? Then enable it via a single setting.
-
-    - title: Deploy to Vercel
-      icon: change_history
-      description: Deploy to Vercel in seconds. Vercel Functions, Vercel Redirects/Rewrites, and Vercel Headers are all configurable for an enriched experience.
+    - title: Constant Updation
+      icon: update
+      description: Challenges will be uploaded on regular basis.
 
     - title: Dark Mode
       icon: dark_mode
-      description: "Prefer not to be blasted by the sun while reading? Switch to a low-light UI with the click of a button. Modify colour variables to match your branding."
+      description: Dark mode option available for hacking feel.
 
-    - title: Search by DocSearch
-      icon: search
-      description: Search your docs with DocSearch. A powerful, efficient and accessible search solution built on Algolia Crawler & Autocomplete.
-
-    - title: Multilingual Support
-      icon: translate
-      description: Lotus Docs supports Hugo's Multilingual Mode. Create documentation in multiple languages side by side with i18n support.
-
-    - title: Bootstrap v5
-      icon: palette
-      description: Built on Bootstrap 5, Lotus Docs allows for a familiar, flexible, and intuitive developer experience. Easily customise your site via SCSS variables and files.
 
 # Image compare
 imageCompare:
